[package]
name = "multitool-telegram-bot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15.0"

sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
teloxide = { version = "0.13", features = [
    "macros",
    "cbor-serializer",
    "sqlite-storage-rustls",
    "sqlite-storage-nativetls",
] }

tokio ={version = "1.43.0", features = ["full"]}
serde = { version = "1.0.217", features = ["derive"] }
